--- a/DIARY/index.html
+++ b/DIARY/index.html
@@ -7,14 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>Войтехович Евгений</h1>
-    <hr>
-    <h3>home 1</h3>
-    <a href="VIZBOR/vizbor.html">vizbor</a> <br>
-    <a href="DIARY/index.html">diary</a>
-    <hr>
-    <h3>home 2</h3>
-    
+    <h1>DIARY</h1>
 </body>
 </html>
