add check homework

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Войтехович Евгений</h1>
     <hr>
     <h3>home 1</h3>
-    <a href="VIZBOR/vizbor.html">vizbor</a> <br>
-    <a href="DIARY/index.html">diary</a>
+    <a href="VIZBOR/vizbor.html">vizbor - check</a> <br>
+    <a href="DIARY/index.html">diary - check</a>
     <hr>
     <h3>home 2</h3>
     
