add font converting files

--- a/DIARY/index.html
+++ b/DIARY/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>DIARY</h1>
+
+    <ol>
+        <li>
+            <strong>понедельник</strong> Lorem ipsum, dolor sit amet <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D1%82%D0%BE%D1%86%D0%B8%D0%BA%D0%BB">consectetur</a>  adipisicing elit. Atque id quaerat nam fugit, accusamus quas tempore voluptatem provident et. Velit quis nulla, error saepe neque nostrum illum est sit aliquam.
+        </li>
+    </ol>
 </body>
 </html>
