--- a/background/index.html
+++ b/background/index.html
@@ -9,9 +9,15 @@
 <div style="
         width: 500px;
         height: 500px;
-        background: url('1.jpeg') no-repeat right bottom, url('2.jpeg') no-repeat left bottom;
+        background: url('1.jpeg') no-repeat right bottom, url('2.jpeg') no-repeat left top;
+
+
+
         background-size: contain;
 "></div>
+
+\n
+
 
 </body>
 </html>
