done maket float (not adapt)

--- a/float/index.html
+++ b/float/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -10,7 +13,6 @@
 
 </head>
 <body>
-
 
 <div class="header clearfix">
   <div class="container">
@@ -67,7 +69,7 @@
 </div>
 
 <div class="description">
-  <div class="container">
+  <div class="container clearfix">
     <div class="gallery">
       <ul>
         <li><img src="img/slide1.png" alt="img"></li>
@@ -77,9 +79,329 @@
       </ul>
       <div class="big__photo"></div>
     </div>
-    <div class="description__text"></div>
+    <div class="description__text">
+      <ul class="stars clearfix">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <h1>Шлем HJC RPHA 70 Carbon </h1>
+      <p class="light clearfix">
+        <span>Код: SKU 163003</span>
+        <span>3 Отзывы</span>
+      </p>
+      <h2>779.00 р</h2>
+      <div class="basket">
+        <button>в корзину</button>
+        <img src="img/heart.svg" alt="">
+        <img src="img/compare.svg" alt="">
+      </div>
+      <p class="descr_p">Цвет: черный классик</p>
+      <p class="descr_p">Материал: высокопрочный карбон</p>
+      <ul class="size clearfix">
+        <li>S</li>
+        <li class="active">M</li>
+        <li>L</li>
+        <li>XL</li>
+      </ul>
+      <div class="item-logo clearfix">
+        <img src="img/HJC.png" alt="">
+        <p>Номер 1 в мире</p>
+      </div>
+    </div>
   </div>
 </div>
+
+<div class="similar__items">
+  <div class="container">
+    <h3>Похожие товары</h3>
+    <ul class="item clearfix">
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/similar1.png" alt="">
+        </div>
+        <h6>Шлем HJC CS-15 Trion MC2SF</h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>599.00 р</h5>
+        </div>
+      </li>
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/similar2.png" alt="">
+        </div>
+        <h6>Шлем LS2 MX437 Fast Black Green</h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>489.00 р</h5>
+        </div>
+      </li>
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/similar3.png" alt="">
+        </div>
+        <h6>Шлем SHARK X-DRAK Black Mat </h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>879.00 р</h5>
+        </div>
+      </li>
+    </ul>
+    <h4>С этим товаром часто покупают</h4>
+    <ul class="item item__small clearfix">
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/item_bottom1.png" alt="">
+        </div>
+        <h6>Шлем HJC CS-15 Trion MC2SF</h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>599.00 р</h5>
+        </div>
+      </li>
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/item_bottom2.png" alt="">
+        </div>
+        <h6>Шлем LS2 MX437 Fast Black Green</h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>489.00 р</h5>
+        </div>
+      </li>
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/item_bottom3.png" alt="">
+        </div>
+        <h6>Шлем SHARK X-DRAK Black Mat </h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>879.00 р</h5>
+        </div>
+      </li>
+      <li>
+        <div>
+          <img src="img/heart.svg" alt="">
+        </div>
+        <div>
+          <img src="img/item_bottom4.png" alt="">
+        </div>
+        <h6>Шлем SHARK X-DRAK Black Mat </h6>
+        <div class="similar__bottom">
+          <ul class="stars clearfix">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>879.00 р</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="reviews">
+  <div class="container">
+    <h3 class="clearfix">Отзывы о товаре <span>Добавить отзыв</span></h3>
+
+    <div class="single__review">
+      <div class="date">22.08.2020</div>
+      <ul class="stars clearfix">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div class="review__content">
+        <p class="user__title">Алексей</p>
+        <p class="user__content">
+          Отличный шлем, очень доволен покупкой, хорошая вентиляция, визор не потеет без пинлока, качество изготовления на высоте как и шумоизоляция! Рекомендую
+        </p>
+      </div>
+    </div>
+    <div class="single__review">
+      <div class="date">22.08.2020</div>
+      <ul class="stars clearfix">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div class="review__content">
+        <p class="user__title">Алексей</p>
+        <p class="user__content">
+          Отличный шлем, очень доволен покупкой, хорошая вентиляция, визор не потеет без пинлока, качество изготовления на высоте как и шумоизоляция! Рекомендую
+        </p>
+      </div>
+    </div>
+    <div class="single__review">
+      <div class="date">22.08.2020</div>
+      <ul class="stars clearfix">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div class="review__content">
+        <p class="user__title">Алексей</p>
+        <p class="user__content">
+          Отличный шлем, очень доволен покупкой, хорошая вентиляция, визор не потеет без пинлока, качество изготовления на высоте как и шумоизоляция! Рекомендую
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <div class="container clearfix">
+    <ul class="help">
+      <li>
+        <a href="#">Помощь</a>
+      </li>
+      <li>
+        <a href="#">Статус заказа по номеру</a>
+      </li>
+      <li>
+        <a href="#">Центр поддержки</a>
+      </li>
+      <li>
+        <a href="#">Как оформить заказ</a>
+      </li>
+      <li>
+        <a href="#">Как выбрать размер</a>
+      </li>
+      <li>
+        <a href="#">Условия доставки</a>
+      </li>
+      <li>
+        <a href="#">Мои заказы</a>
+      </li>
+      <li>
+        <a href="#">Возврат</a>
+      </li>
+      <li>
+        <a href="#">Публичная оферта</a>
+      </li>
+      <li>
+        <a href="#">Программа лояльности</a>
+      </li>
+    </ul>
+    <div class="support">
+      <p class="title">Круглосуточная поддерка</p>
+      <p>+375(17)388-04-09</p>
+      <ul class="footer__social clearfix">
+        <li>
+          <img src="img/soc1.svg" alt="">
+        </li>
+        <li>
+          <img src="img/soc2.svg" alt="">
+        </li>
+        <li>
+          <img src="img/soc3.svg" alt="">
+        </li>
+      </ul>
+      <p class="email">
+        Email: <br>
+        <a href="mailto:BikerShop@gmai.com">BikerShop@gmai.com</a>
+      </p>
+    </div>
+    <div class="mobile__device">
+      <p class="title">Для мобильных устройств</p>
+      <img src="img/app-store.png" alt=""> <br>
+      <img src="img/google.png" alt="">
+      <p>
+        Вы также можете перейти на <br><a href="#">мобильную версию сайта.</a>
+      </p>
+    </div>
+    <div class="social__network">
+      <p class="title">Мы в соцсетях</p>
+      <ul class="clearfix">
+        <li>
+          <img src="img/soc-net1.png" alt="">
+        </li>
+        <li>
+          <img src="img/soc-net2.png" alt="">
+        </li>
+        <li>
+          <img src="img/soc-net3.png" alt="">
+        </li>
+        <li>
+          <img src="img/soc-net4.png" alt="">
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
 
 
 
