--- a/float/index.html
+++ b/float/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Title</title>
 
 </head>
@@ -70,7 +70,7 @@
 
 <div class="description">
   <div class="container clearfix">
-    <div class="gallery">
+    <div class="gallery clearfix">
       <ul>
         <li><img src="img/slide1.png" alt="img"></li>
         <li><img src="img/slide2.png" alt="img"></li>
@@ -78,6 +78,12 @@
         <li><img src="img/slide4.png" alt="img"></li>
       </ul>
       <div class="big__photo"></div>
+      <ul class="gallery__mobile">
+        <li><img src="img/slide1.png" alt="img"></li>
+        <li><img src="img/slide2.png" alt="img"></li>
+        <li><img src="img/slide3.png" alt="img"></li>
+        <li><img src="img/slide4.png" alt="img"></li>
+      </ul>
     </div>
     <div class="description__text">
       <ul class="stars clearfix">
@@ -117,65 +123,67 @@
 <div class="similar__items">
   <div class="container">
     <h3>Похожие товары</h3>
-    <ul class="item clearfix">
-      <li>
-        <div>
-          <img src="img/heart.svg" alt="">
-        </div>
-        <div>
-          <img src="img/similar1.png" alt="">
-        </div>
-        <h6>Шлем HJC CS-15 Trion MC2SF</h6>
-        <div class="similar__bottom">
-          <ul class="stars clearfix">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <h5>599.00 р</h5>
-        </div>
-      </li>
-      <li>
-        <div>
-          <img src="img/heart.svg" alt="">
-        </div>
-        <div>
-          <img src="img/similar2.png" alt="">
-        </div>
-        <h6>Шлем LS2 MX437 Fast Black Green</h6>
-        <div class="similar__bottom">
-          <ul class="stars clearfix">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <h5>489.00 р</h5>
-        </div>
-      </li>
-      <li>
-        <div>
-          <img src="img/heart.svg" alt="">
-        </div>
-        <div>
-          <img src="img/similar3.png" alt="">
-        </div>
-        <h6>Шлем SHARK X-DRAK Black Mat </h6>
-        <div class="similar__bottom">
-          <ul class="stars clearfix">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <h5>879.00 р</h5>
-        </div>
-      </li>
-    </ul>
+    <div>
+      <ul class="item clearfix">
+        <li>
+          <div>
+            <img src="img/heart.svg" alt="">
+          </div>
+          <div>
+            <img src="img/similar1.png" alt="">
+          </div>
+          <h6>Шлем HJC CS-15 Trion MC2SF</h6>
+          <div class="similar__bottom">
+            <ul class="stars clearfix">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <h5>599.00 р</h5>
+          </div>
+        </li>
+        <li>
+          <div>
+            <img src="img/heart.svg" alt="">
+          </div>
+          <div>
+            <img src="img/similar2.png" alt="">
+          </div>
+          <h6>Шлем LS2 MX437 Fast Black Green</h6>
+          <div class="similar__bottom">
+            <ul class="stars clearfix">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <h5>489.00 р</h5>
+          </div>
+        </li>
+        <li>
+          <div>
+            <img src="img/heart.svg" alt="">
+          </div>
+          <div>
+            <img src="img/similar3.png" alt="">
+          </div>
+          <h6>Шлем SHARK X-DRAK Black Mat </h6>
+          <div class="similar__bottom">
+            <ul class="stars clearfix">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <h5>879.00 р</h5>
+          </div>
+        </li>
+      </ul>
+    </div>
     <h4>С этим товаром часто покупают</h4>
     <ul class="item item__small clearfix">
       <li>
